#52 - CommentService : 자바 스트링 최적화